2016-05-15 Philipp Klaus Krause <pkk AT spth.de>

	* Makefile.in:
	  Fix distclean failures.

2016-05-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/sdbinutils/binutils/arlex.c,
	* support/sdbinutils/binutils/arparse.c,
	* support/sdbinutils/binutils/arparse.h,
	* support/sdbinutils/binutils/defparse.c,
	* support/sdbinutils/binutils/defparse.h,
	* support/sdbinutils/binutils/mcparse.c,
	* support/sdbinutils/binutils/mcparse.h,
	* support/sdbinutils/binutils/rcparse.c,
	* support/sdbinutils/binutils/rcparse.h,
	* support/sdbinutils/binutils/sysinfo.c,
	* support/sdbinutils/binutils/sysinfo.h,
	* support/sdbinutils/binutils/syslex.c: added, as in upstream git

2016-05-13 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/linksrc/lkelf.c:
	  Enable ELF symbol table output, (from patch #255 by Peter Dons Tychsen).

2016-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Minor code cleanup, also gets rid of a GCC warning.

2016-05-10 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure
	* configure.ac
	* src/SDCCmain.c
	  Call setrlimit() in a more compatible way.

2016-05-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/hc08/_setjmp.c,
	* device/lib/s08/_setjmp.c: svn eol-style native
	* support/regression/tests/gcc-torture-execute-pr28982a.c,
	* support/regression/tests/bug-2197.c: enabled for mcs51
	* src/mcs51/gen.c (genFunction, genEndFunction): implemented RFE 81 to
	  disable interrupts before stacking
	* sim/ucsim/s51.src/uc390.cc: use IDMx/MCON instead of SA/ACON
	* sim/ucsim/s51.src/uc390hw.cc: do not lock out all IDM settings
	* src/ds390/main.c (_ds390_genIVT): MCON requires Timed Access

2016-05-06 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/compact-results.py
	  Roll back to previous version.

2016-05-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/setjmp.h: ds390 needs 5 bytes
	* device/lib/_setjmp.c: added ds390 version
	* device/lib/ds390/setjmp.c: updated, but still a dummy