@@ -1,3 +1,10 @@
+2016-05-16 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/peeph.def:
+	  Use more jumps on false for stm8 peepholes.
+	* src/stm8/gen.c:
+	  More efficient comparisons.
+
 2016-05-15 Philipp Klaus Krause <pkk AT spth.de>
 
 	* Makefile.in:
